--- a/web/css/download.css
+++ b/web/css/download.css
@@ -1,10 +1,8 @@
 body{
 	background: #eee;
-	/*min-width: 700px;*/
 }
 .container{
 	width: 85%;
-	/*height:  600px;*/
 	display: inline-block;
 	border-radius: 10px;
 	padding: 20px 0;
@@ -114,6 +112,7 @@ ul li{
 	width: 90%;
 	text-align:left;
 	/*border: 1px solid #666;*/
+	border-collapse: collapse;
 	margin:0 auto;
 }
 table a:hover{
@@ -121,9 +120,12 @@ table a:hover{
 }
 table,tr,td{
 	text-align: left;
+
+
 }
 table tr td{
-	padding: 10px 3px;		
+	padding: 10px 2px;	
+
 }
 table tr .first{
 	width: 400px;
@@ -151,10 +153,7 @@ table tr .first+td i{
 	/*vertical-align: -2px;*/
 	vertical-align: -2px;
 }
-/*table .th~tr .first{
-	text-align: left;
-	padding-left: 5px;
-}*/
+
 .file .th{
 	font-size: 14px;
 	color: #666;
