--- a/web/css/index.css
+++ b/web/css/index.css
@@ -86,6 +86,14 @@
 .login  a:hover{
 	text-decoration: underline;
 }
+#warnning{
+	width: 85%;
+	margin: 0 auto;
+	font-size: 14px;
+	color: red;
+	text-align: left;
+	margin-top: 5px;
+}
 /*关键帧动画*/
 @keyframes rect{
 	0%{
