--- a/web/css/experience.css
+++ b/web/css/experience.css
@@ -156,14 +156,24 @@ body{
 	font-size: 15px;
 	text-align: left;
 }
-.mask .newExp .insert select{
+.mask .newExp .insert .re-select{
 	width: 55px;
 	height: 22px;
 	line-height: 22px;
-	padding: 0;
+	padding: 0 2px;
 	margin: 0;
 	font-size: 14px;
 	vertical-align: middle;
+}
+.mask .newExp .insert .re-select  .arrow{
+	border-width: 4px;
+	right: 3px;
+}
+.mask .newExp .insert .re-select .re-options{
+	top: 21px;
+}
+.mask .newExp .insert  .re-select .re-options .re-option{
+	padding-left: 2px;
 }
 .mask .newExp .insert .pic{
 	position: relative;
@@ -224,7 +234,7 @@ body{
 	width: 80px;
 	height: 28px;
 	line-height: 28px;
-	margin: 0;
+	margin: 5px 0;
 	padding: 0;
 	float: right;
 }
