m解决了火狐浏览器不支持innerText的兼容性问题

--- a/web/css/common.css
+++ b/web/css/common.css
@@ -96,6 +96,9 @@ li{
 	/*可修改*/
 	top: 33px;
 	border: 1px solid #ccc;
+	/*border-left:1px solid #ccc;
+	border-right:1px solid #ccc;
+	border-bottom:1px solid #ccc;*/
 	display: none;
 	cursor: default;
 	width: 100%;
